feat: Rename Feature model to Issue and add OAuth clients
BREAKING CHANGE: The 'Feature' model has been renamed to 'Issue'. This affects the repository, service, schemas, and routes, which have all been updated to reflect the new naming convention. Additionally, OAuth clients for Google, GitHub, and LinkedIn have been integrated using the fastapi-users library with httpx_oauth.

--- a/champ-api/Pipfile
+++ b/champ-api/Pipfile
@@ -9,8 +9,9 @@ uvicorn = "*"
 sqlalchemy = "*"
 alembic = "*"
 python-decouple = "*"
-fastapi-users = {extras = ["sqlalchemy", "redis"], version = "*"}
 asyncpg = "*"
+fastapi-users = {extras = ["oauth", "redis", "sqlalchemy"], version = "*"}
+httpx-oauth = "*"
 
 [dev-packages]
 
