--- a/champ-ui/package.json
+++ b/champ-ui/package.json
@@ -34,6 +34,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.360.0"
+		"@tailwindcss/typography": "^0.5.10",
+		"lucide-svelte": "^0.360.0",
+		"marked": "^12.0.1"
 	}
 }
