--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
+    "markdown-it": "^14.1.0",
     "masonic": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
