feat(tests): First utility function test with jest and added testing to `ci-dev` workflow

--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Build project
       run: yarn build
 
-    # - name: Run tests
-    #   run: yarn test
+    - name: Run tests
+      run: yarn test
 
