Some random things

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/coverage
+
+# next.js
+.next/
+ /out/
+
+# production
+/build
 
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
-.yarn/install-state.gz
+/.pnp.js
+/.yarn/install-state.gz
 
 # testing
 /coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -34,3 +34,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
