--- a/solomon-ui/package.json
+++ b/solomon-ui/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^10.0.5",
     "rehype-highlight": "^7.0.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
