--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /build
 
 # dependencies
+node_modules
 /node_modules
 /.pnp
 /.pnp.js
@@ -26,6 +27,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
