--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,26 @@ services:
     container_name: solomon-db
     build:
       context: .
-      dockerfile: docker/postgres/Dockerfile
+      dockerfile: docker/solomon-db/Dockerfile
     env_file:
-      - ./solomon-ui/.env
+      - .env
     ports:
       - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
 
+  solomon-api:
+    container_name: solomon-api
+    build:
+      context: .
+      dockerfile: docker/solomon-api/Dockerfile
+    env_file:
+      - .env
+    volumes:
+      - ./solomon-api:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - solomon-db
+    
   # solomon-ui:
   #   build:
   #     context: .
@@ -25,6 +37,6 @@ services:
   #   depends_on:
   #     - solomon-db
 
-volumes:
-  postgres-data:
+# volumes:
+#   postgres-data:
 
