--- a/solomon-ui/package.json
+++ b/solomon-ui/package.json
@@ -10,8 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@apollo/server": "^4.10.4",
-    "@prisma/client": "^5.15.1",
     "framer-motion": "^11.2.10",
     "graphql": "^16.9.0",
     "gray-matter": "^4.0.3",
@@ -24,8 +22,7 @@
     "react-toastify": "^10.0.5",
     "rehype-highlight": "^7.0.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "ts-node": "^10.9.2"
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
@@ -33,7 +30,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/markdown-it": "^14.1.1",
-    "@types/node": "^20",
+    "@types/node": "^20.14.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
